# a2ui-demo

./: .gitignore  DEVELOPER.md  README.md  a2ui-full.html  a2ui-interactive.html  a2ui-std.html  a2ui-vite.html  a2ui.html  admin.html  ag-ui.html  agui.html  app.html  demo.html  index.html  package-lock.json  package.json  setup.sh  simple.html  test.html  vite.config.js
.tmp/: chart_01xtbf.py  chart_04aox3.py  chart_08qael.py  chart_0pkexw.py  chart_215arx.py  chart_262sfw.py  chart_3ns47g.py  chart_41tkwr.py  chart_4j1ueq.py  chart_5tinx9.py  chart_5vrqro.py  chart_6z5ndb.py  chart_7qbref.py  chart_8qzro7.py  chart_9s57b8.py  chart_9x6q3p.py  chart_c1uv7n.py  chart_do9w7j.py  chart_ebaxkx.py  chart_f17b7q.py  chart_feoa1q.py  chart_fs84nr.py  chart_g1rkky.py  chart_gz8huz.py  chart_hkem0w.py  chart_j0krq8.py  chart_jaq7n6.py  chart_ju1vj1.py  chart_k499kh.py  chart_kl5r40.py  chart_lu1gbc.py  chart_mdgz4u.py  chart_n65gbk.py  chart_njfliy.py  chart_o1i5wm.py  chart_ohz35q.py  chart_opmcqb.py  chart_oru0ul.py  chart_ppb48c.py  chart_pwe54t.py  (+12 more)
desktop/: index.html  package.json  tsconfig.json  vite.config.ts
desktop/.cargo/: config.toml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
server/: package.json  server.js
src/: a2ui-main.js  a2ui-std.js  main.js
